<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangerPassword"
    android:orientation="vertical"
    android:background="@color/vert">

  <ImageView
      android:background="@drawable/rond_image"
      android:layout_marginTop="@dimen/enHaut"
      android:id="@+id/imageProfil"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:src="@drawable/profil"
      android:layout_gravity="center"

      />

  <TextView

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/changer_pass"
      android:textColor="@color/vertTexte"
      android:textSize="@dimen/enHaut"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      />

  <EditText

      android:layout_marginTop="@dimen/enHaut"
      android:layout_gravity="center"
      android:layout_width="300dp"
      android:layout_height="30dp"
    android:background="@drawable/ellipse"
      android:inputType="textMultiLine"
    android:hint="@string/mot_de_passe_courant"
      android:paddingLeft="@dimen/paddin_left_text"

/>

  <!--<LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/enHaut"
    android:orientation="horizontal">-->

  <EditText
      android:id="@+id/editTextPassword"
      android:layout_marginTop="@dimen/enHaut"
      android:layout_gravity="center"
      android:layout_width="300dp"
      android:layout_height="30dp"
      android:background="@drawable/ellipse"
      android:inputType="textPassword"
      android:hint="@string/nouv_mot_passe"
      android:paddingLeft="@dimen/paddin_left_text"

      />
   <!--<RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
  <ToggleButton
      android:id="@+id/toggleButtonShowPassword"
      android:background="@drawable/sphere"
      android:layout_width="100dp"
      android:layout_height="wrap_content"

      android:textOn="Afficher"
      android:textOff="Masquer"
      android:checked="false" />
    </RelativeLayout>
  </LinearLayout>-->

  <EditText
      android:layout_marginTop="@dimen/enHaut"
      android:layout_gravity="center"
      android:layout_width="300dp"
      android:layout_height="30dp"
      android:background="@drawable/ellipse"
      android:inputType="textPassword"
      android:hint="@string/conf_pass"
      android:paddingLeft="@dimen/paddin_left_text"

      />

  <Button
      android:id="@+id/button_email"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:text="@string/récupererBtn"

      android:layout_gravity="center"
      android:layout_marginTop="40dp"

      />

  </LinearLayout>