<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vert"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarresetPwd"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/resetpasswordHeader"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />




    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/jost_extrabold"
        android:text="@string/TitleApp"
        android:textColor="@color/white"
        android:textSize="30sp"
         />




    <EditText

        android:id="@+id/email_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/login"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textSize="15sp"


        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/resetpasswordBtn"
        android:fontFamily="@font/hubballi_regular"
        android:textStyle="bold"
        android:textSize="20sp"


        />






</LinearLayout>
